merge code